# django-example

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: manage.py
app/authentication/: admin.py  models.py  router.py  schemas.py  urls.py
app/authentication/migrations/: 0001_initial.py
app/authentication/services/: login.py  refresh_token.py
app/common/: enums.py  exceptions.py  mappings.py
app/site_example/: api.py  asgi.py  exception_handlers.py  settings.py  urls.py  wsgi.py
app/templates/: base.html  index.html
app/templates/account/: confirm_email_verification_code.html  confirm_password_reset_code.html  login.html  password_reset.html  password_reset_from_key.html  profile.html  signup.html
