[project]
name = "django-template"
version = "0.1.0"
description = ""
authors = [{ name = "harold", email = "harold.k.basa@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "ERA",  # eradicate
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "T10",  # flake8-django
    "T20",  # flake8-print
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "RUF"   # Ruff-specific rules
]

# allow `isort` fixes when `--fix` is provided
fixable = ["I"]
unfixable = []

# ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
